matrix/synapse/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      securityContext:
        fsGroup: 991

      containers:
        - name: synapse
          image: ghcr.io/element-hq/synapse:v1.159.0
          securityContext:
            runAsUser: 991
            runAsGroup: 991
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8008
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: synapse-data
              mountPath: /data
            - name: synapse-signing-key
              mountPath: /keys/polarys.im.signing.key
              subPath: polarys.im.signing.key
              readOnly: true
            - name: synapse-config
              mountPath: /config/polarys.im.log.config
              subPath: log.config

      volumes:
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-pvc
        - name: synapse-signing-key
          secret:
            secretName: matrix-creds
            items:
              - key: MX_SIGNING_KEY
                path: polarys.im.signing.key
        - name: synapse-config
          configMap:
            name: synapse-cfm
