matrix/synapse/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: synapse
  ports:
    - name: http
      port: 8008
      targetPort: http
